--- a/MeetingNotes/2018_Nov15.md
+++ b/MeetingNotes/2018_Nov15.md
@@ -1,1 +1,10 @@
-# test 123
+# ADCP Discussion
+Nov 15, 2018 10:00-12:00
+IOS Central Boardroom
+
+## Attendees
+ASL: Keath Borg, Todd Mudge  
+Hakai: Jennifer Jackson, Pramod Thupaki, Jessy Barrette  
+ONC: Mike Morley, Steve Mihaly  
+CHS: Marlene Jeffries, Serge Paquet  
+OSD: David Spear, Roy Hourston, Lucius Perreault, Stephen Page, Dave Riedel, Di Wan, Jon Chamberlain, Peter Van Buren, Mike Dempsey,  
