--- a/MeetingNotes/2018_Nov15.md
+++ b/MeetingNotes/2018_Nov15.md
@@ -2,9 +2,19 @@
 Nov 15, 2018 10:00-12:00
 IOS Central Boardroom
 
-## Attendees
-ASL: Keath Borg, Todd Mudge  
-Hakai: Jennifer Jackson, Pramod Thupaki, Jessy Barrette  
-ONC: Mike Morley, Steve Mihaly  
-CHS: Marlene Jeffries, Serge Paquet  
-OSD: David Spear, Roy Hourston, Lucius Perreault, Stephen Page, Dave Riedel, Di Wan, Jon Chamberlain, Peter Van Buren, Mike Dempsey,  
+### Attendees
+ASL: KB, TM  
+Hakai: JJ, PT, JB  
+ONC: MM, SM  
+CHS: MJ, SP  
+OSD: DS, RH, LP, SJP, DR, DW, JC, PVB, MD, GC, MR  
+
+### Topics
+1. ADCP Setup (only covered moorings, ship mounted to come)
+2. ADCP post-processing
+
+### Summary Points
+1. No generic standardized setup document is needed but specific example documents could be beneficial. 
+2. Annual/semi-annual discussion meeting is good
+3. More frequent online communication will be beneficial for all groups
+4. 
